# ReSTIR-FG

./: .gitignore  LICENSE  README.md  dependencies.xml
Models/: ReSTIR_FG_Bistro.py  ReSTIR_FG_Kitchen.py  ReSTIR_FG_NRD_Bistro.py  ReSTIR_FG_NRD_Kitchen.py  ReSTIR_FG_NRD_Sibenik.py  ReSTIR_FG_NRD_VeachAjar.py  ReSTIR_FG_Sibenik.py  ReSTIR_FG_VeachAjar.py
Models/VeachAjar/: VeachAjar.pyscene  VeachAjarAnimated.pyscene
Models/sibenik_withStatue/: copyright.txt  sibenik_withGlasStatue.gltf  sibenik_withGlasStatue.pyscene  sibenik_withGlasStatue_Emissive.pyscene  sibenik_withStatue.gltf  sibenik_withStatue.pyscene
Source/Falcor/: CMakeLists.txt
Source/Falcor/Core/: SampleApp.cpp
Source/Falcor/RenderGraph/: RenderGraph.cpp  RenderPassStandardFlags.h  ResourceCache.h
Source/Falcor/Scene/: FrustumCulling.cpp  FrustumCulling.h  Raytracing.slang  Scene.cpp  Scene.h  SceneBuilder.cpp  SceneBuilder.h  SceneTypes.slang
Source/Mogwai/: Mogwai.cpp
Source/RenderPasses/: CMakeLists.txt
Source/RenderPasses/AccumulatePass/: AccumulatePass.cpp  AccumulatePass.h
Source/RenderPasses/CameraPath/: CMakeLists.txt  CameraPath.cpp  CameraPath.h
Source/RenderPasses/DLSSPass/: DLSSPass.cpp  (+3 more)
Source/RenderPasses/NRDPass/: CMakeLists.txt  NRDPass.cpp  NRDPassBase.cpp  NRDPassBase.h  PackRadiance.cs.slang
Source/RenderPasses/NRDPass/NRDPasses/: NRDPassNormal.cpp  NRDPassNormal.h  NRDPassOcclusion.cpp  NRDPassOcclusion.h  NRDPassShadow.cpp  NRDPassShadow.h
scripts/: PathTracer.py  ReSTIR_FG.py  ReSTIR_FG_Lite.py  ReSTIR_FG_NRD.py  WhittedRayTracer.py
tools/packman/: packman
(+78 files in other folders)
